Version 0.7.8 * major refactors and cleanups * fixed exception handling throughout the application * merged executions tab and variables SidePanel with entry setup tab using SplitPanes * added more alert popups for various events * fixed redundant tray notifs * sonar fixes * jvm args during application build to prevent warnings